# final-project-level3-cv-12

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: model_test_action.yml
C-VTON/: config.py  requiement.txt  test.py
C-VTON/dataloaders/: DresscodeDataset.py  dataloaders.py
C-VTON/scripts/: test_dresscode.sh
C-VTON/utils/: metrics.py
DAFlow/: README.md  datasets.py  get_weights.sh  metric_calcuation.ipynb  test_SDAFNet_viton.py  train_SDAFNet_viton.py
DAFlow/models/: sdafnet.py
DAFlow/utils/: metircs.py  metrics.py  utils.py
DAFlow/utils/lpips/: __init__.py
DensePose/: apply_net.py  requirements.txt
DensePose/densepose/vis/: extractor.py
back-test/bentoml_v1/: Makefile  README.md  requirements.txt
back-test/bentoml_v1/app/: README.md  bentofile.yaml  frontend.py  homepage.py  model.py  preprocess.py  save_model.py  service.py
back-test/fastapi/: Makefile  README.md
back-test/fastapi/app/: model.py
hr_viton/: cp_dataset_test.py  cp_dataset_test_dresscode.py  test_generator.py  test_generator_dresscode.py
openpose/: README.md  openpose.py  requirements.txt
server/bentoml_v1/: Makefile  README.md  requirements.txt
server/fastapi/app/: main.py  (+1 more)
service/back-end/: README.md  load_test.py  warmup_server.py
service/front-end/: README.md  homepage.py
test/: test.py
utils/: export_tensor.sh  export_torch.sh  make_test_dataset.py  pkl_to_png.py  split_dataset.py
utils/data_preprocessing/: get_agnostic_v3.0.py
(+53 files in other folders)
