[tool.poetry]
name = "vton"
version = "0.1.0"
description = "final-project"
authors = ["cv12"]
license = "UNLICENSED"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
albumentations = "^1.3.0"
bentoml = "^1.0.13"
carvekit = "^4.1.0"
matplotlib = "^3.6.3"
ipykernel = "^6.20.2"
ninja = "^1.11.1"
streamlit = "^1.17.0"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu113/torchvision-0.12.0%2Bcu113-cp38-cp38-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu113/torchaudio-0.11.0%2Bcu113-cp38-cp38-linux_x86_64.whl"}
opencv-python = "4.5.5.64"
h5py = "^3.8.0"
wandb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"